--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
     padding:0 5% 0 2%;
   }
 
-  .login, .signUp{
+  .login{
     padding: 20px 100px 20px 100px;
     margin-bottom: 10px;
     /* border-collapse: 5%; */
@@ -78,3 +78,25 @@ body {
       padding:0 300px 0 300px;
       margin:0 50px 0 50px;
     }
+    .homePage{
+      text-align: center;
+    }
+    .accountForm{
+     
+      text-align: center;
+      margin: 0 30% 0 10% ;
+      padding:0 5px 0 200px;
+      font-size: 25px;
+   
+    }
+
+    .divi{
+      text-align: center;
+      padding: 25px;
+    }
+
+    .signUp{
+      padding: 30px 280px 30px 280px;
+      margin-bottom: 10px;
+      /* border-collapse: 5%; */
+      font-size:15px}
