--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,19 @@
 body {
   background-color: powderblue;
 
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; 
 
 }
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+} 
 
 label{
   margin: 20px;
@@ -117,6 +128,7 @@ label{
     }
 
     .fullName{
+      text-align: left;
       padding:20px 200px 20px 300px;
       margin: 10px;
       font-size: 20px;
