--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,13 @@ label{
       margin: 10px;
       font-size: 20px;
     }
+
+    .navbar{
+      display: flex;
+  justify-content: space-between;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 10px 0;
+  font-size: 15px;
+      
+    }
