--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 
+
+
 body {
   background-color: powderblue;
 
@@ -64,7 +66,7 @@ label{
   }
 
   .createJob{
-    text-align: center;
+    /* text-align: center; */
     font-size: 20px;
     margin: 25px;
  /* width: 100%;
@@ -73,12 +75,14 @@ label{
     
      
     }
-    .createJobInput{
-      padding: 10px 200px 10px 200px ;
+    /* .createJobInput{
+      padding: 10px 0% 10px 0% ;
     margin-bottom: 10px;
-    font-size:25px
+    font-size:15px;
+    width: 25%;
+    
  
-    }
+    } */
 
     .signUpButton{
       border-radius: 20px;
@@ -90,8 +94,9 @@ label{
     }
     .jobCreation{
       text-align: center;
-      padding:0 300px 0 300px;
+      /* padding:0 5% 0 5%; */
       margin:0 50px 0 50px;
+      width: 35%;
     }
     .homePage{
       text-align: center;
@@ -146,3 +151,46 @@ label{
     .goback{
       margin-left: 1100px;
     }
+    .company{
+
+      width: 20%;
+      background-color: aliceblue;
+    display: inline-block;
+      margin-right: 10%;
+
+    }
+
+
+    .form-container {
+      background-color: rgb(11, 14, 14);
+      max-width: 70%;
+      margin: 0 auto;
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+      background-color: #fff;
+    }
+    
+    .form-group {
+      margin-bottom: 15px;
+    }
+    
+    .form-label {
+      font-weight: bold;
+    }
+    
+    .btn-primary {
+      width: 100%;
+      margin-top: 15px;
+    }
+    
+    /* Media query for mobile responsiveness */
+    @media (max-width: 768px) {
+      .form-container {
+        max-width: 100%;
+      }
+    }
+    .info{
+      background-color: powderblue;
+    }
+    
