--- a/src/index.css
+++ b/src/index.css
@@ -249,4 +249,16 @@ margin: 0px 0 5% 0;
     /* font-weight: bold; */
     font-size: 20px;
   }
+
+  .logOut{
+    display: inline-block;
+    /* margin-left: 100%; */
+    max-width: 150px;
+  }
+  .go-back{
+    display: inline-block;
+    /* margin-left: 100%; */
+    max-width: 90px;
+    margin:50px 0 0 80%;
+  }
     
