Import toastContainer in App.js and replace the alert with toast in login component.

--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,7 @@ label{
       padding: 20px 200px 20px 300px;
       margin-bottom: 10px;
       /* border-collapse: 5%; */
-      font-size:15px
+      font-size:15px;
     }
 
     .jobApplication{
