--- a/src/index.css
+++ b/src/index.css
@@ -261,4 +261,11 @@ margin: 0px 0 5% 0;
     max-width: 90px;
     margin:50px 0 0 80%;
   }
+
+  .follow{
+    margin: 10px 5px 0 0 ;
+    border: none;
+    max-width: 180px;
+
+  }
     
