--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,7 @@ label{
       width: 35%;
     }
     .homePage{
+      font-size: 20px;
       text-align: center;
     }
     .accountForm{
@@ -246,8 +247,8 @@ margin: 0px 0 5% 0;
 
   .warning{
     text-align: center;
-    /* font-weight: bold; */
     font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
 
   .logOut{
